[tool.poetry]
name = "backend-python-creditcard"
version = "0.1.0"
description = ""
authors = ["Alexandre Henrique Afonso Campos <camposalexandreh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
